Bug 1436903 - Avoid passing shipping options to the front end when shipping was not requested. r=baku

MozReview-Commit-ID: FdkC02izUy6