dom/payments/PaymentRequestManager.cpp
@@ -114,7 +114,8 @@ ConvertDetailsBase(JSContext* aCx,
                    const PaymentDetailsBase& aDetails,
                    nsTArray<IPCPaymentItem>& aDisplayItems,
                    nsTArray<IPCPaymentShippingOption>& aShippingOptions,
-                   nsTArray<IPCPaymentDetailsModifier>& aModifiers)
+                   nsTArray<IPCPaymentDetailsModifier>& aModifiers,
+                   bool aRequestShipping)
 {
   NS_ENSURE_ARG_POINTER(aCx);
   if (aDetails.mDisplayItems.WasPassed()) {
@@ -124,7 +125,7 @@ ConvertDetailsBase(JSContext* aCx,
       aDisplayItems.AppendElement(displayItem);
     }
   }
-  if (aDetails.mShippingOptions.WasPassed()) {
+  if (aRequestShipping && aDetails.mShippingOptions.WasPassed()) {
     for (const PaymentShippingOption& option : aDetails.mShippingOptions.Value()) {
       IPCPaymentShippingOption shippingOption;
       ConvertShippingOption(option, shippingOption);
@@ -147,7 +148,8 @@ ConvertDetailsBase(JSContext* aCx,
 nsresult
 ConvertDetailsInit(JSContext* aCx,
                    const PaymentDetailsInit& aDetails,
-                   IPCPaymentDetails& aIPCDetails)
+                   IPCPaymentDetails& aIPCDetails,
+                   bool aRequestShipping)
 {
   NS_ENSURE_ARG_POINTER(aCx);
   // Convert PaymentDetailsBase members
@@ -155,7 +157,7 @@ ConvertDetailsInit(JSContext* aCx,
   nsTArray<IPCPaymentShippingOption> shippingOptions;
   nsTArray<IPCPaymentDetailsModifier> modifiers;
   nsresult rv = ConvertDetailsBase(aCx, aDetails, displayItems, shippingOptions,
-                                   modifiers);
+                                   modifiers, aRequestShipping);
   if (NS_WARN_IF(NS_FAILED(rv))) {
     return rv;
   }
@@ -185,7 +187,8 @@ ConvertDetailsInit(JSContext* aCx,
 nsresult
 ConvertDetailsUpdate(JSContext* aCx,
                      const PaymentDetailsUpdate& aDetails,
-                     IPCPaymentDetails& aIPCDetails)
+                     IPCPaymentDetails& aIPCDetails,
+                     bool aRequestShipping)
 {
   NS_ENSURE_ARG_POINTER(aCx);
   // Convert PaymentDetailsBase members
@@ -193,7 +196,7 @@ ConvertDetailsUpdate(JSContext* aCx,
   nsTArray<IPCPaymentShippingOption> shippingOptions;
   nsTArray<IPCPaymentDetailsModifier> modifiers;
   nsresult rv = ConvertDetailsBase(aCx, aDetails, displayItems, shippingOptions,
-                                   modifiers);
+                                   modifiers, aRequestShipping);
   if (NS_WARN_IF(NS_FAILED(rv))) {
     return rv;
   }
@@ -430,6 +433,7 @@ PaymentRequestManager::CreatePayment(JSContext* aCx,
   nsAutoString shippingOption;
   SetDOMStringToNull(shippingOption);
   if (aOptions.mRequestShipping) {
+    request->ShippingWasRequested();
     request->SetShippingType(
         Nullable<PaymentShippingType>(aOptions.mShippingType));
     GetSelectedShippingOption(aDetails, shippingOption);
@@ -451,7 +455,7 @@ PaymentRequestManager::CreatePayment(JSContext* aCx,
   }
 
   IPCPaymentDetails details;
-  rv = ConvertDetailsInit(aCx, aDetails, details);
+  rv = ConvertDetailsInit(aCx, aDetails, details, aOptions.mRequestShipping);
   if (NS_WARN_IF(NS_FAILED(rv))) {
     return rv;
   }
@@ -545,7 +549,8 @@ PaymentRequestManager::CompletePayment(const nsAString& aRequestId,
 nsresult
 PaymentRequestManager::UpdatePayment(JSContext* aCx,
                                      const nsAString& aRequestId,
-                                     const PaymentDetailsUpdate& aDetails)
+                                     const PaymentDetailsUpdate& aDetails,
+                                     bool aRequestShipping)
 {
   NS_ENSURE_ARG_POINTER(aCx);
   RefPtr<PaymentRequest> request = GetPaymentRequestById(aRequestId);
@@ -560,7 +565,7 @@ PaymentRequestManager::UpdatePayment(JSContext* aCx,
   //           option.
 
   IPCPaymentDetails details;
-  nsresult rv = ConvertDetailsUpdate(aCx, aDetails, details);
+  nsresult rv = ConvertDetailsUpdate(aCx, aDetails, details, aRequestShipping);
   if (NS_WARN_IF(NS_FAILED(rv))) {
     return rv;
   }
